2023-11-15T16:08:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6879873363 # 2044
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-15
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 293 462 / 297 467
* notice: next accum: outdated-unq outdated-all / unq all: 295 464 / 297 467
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-01] / []

2023-11-13T16:08:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6852591972 # 2038
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-13
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 292 461 / 297 467
* notice: next accum: outdated-unq outdated-all / unq all: 293 462 / 297 467
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-30] / []

2023-11-12T16:06:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6841735691 # 2035
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-12
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 287 456 / 297 467
* notice: next accum: outdated-unq outdated-all / unq all: 292 461 / 297 467
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-29] / []

2023-11-05T16:06:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6762366448 # 2014