@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-15T16:08:35Z",
+  "timestamp" : "2023-11-16T00:32:27Z",
   "count_outdated" : 464,
   "uniques_outdated" : 295,
-  "count" : 467,
-  "uniques" : 297,
+  "count" : 468,
+  "uniques" : 298,
   "clones" : [
     {
       "timestamp": "2023-11-03T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2023-11-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
