@@ -1,3 +1,12 @@
+2023-11-16T00:32:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6884641434 # 2045
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-16
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 295 464 / 297 467
+* notice: next accum: outdated-unq outdated-all / unq all: 295 464 / 298 468
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-11-15]
+
 2023-11-15T16:08:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6879873363 # 2044
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-15
